# latex2word

./: .gitignore  README.md  bib.py  chunk.py  formula.py  install.sh  label.py  latex_formula_demo.docx  macro.py  main.py  main.sh  postprocess.sh  preprocess.sh  pyproject.toml  refmap.py  render.py  render.sh  replace.py  requirements.txt  strip.py  table.py  test.py  test_formula.py  test_table.py  tex.py  translate.py  translate.sh  write.sh
.latex2word_data/: app.db
.latex2word_jobs/09f037da4eea4293b1ea052e5b76c505/: events.ndjson  request.json  status.json
.latex2word_jobs/5b021974160b426ea8172a1fd489f430/: events.ndjson  request.json  status.json
.latex2word_jobs/a6fcb946612b48119cf72c561621bde4/: events.ndjson  request.json  status.json
.latex2word_jobs/b57cf2ffec2a45808d5eea1e5ba7ff97/: events.ndjson  request.json  status.json
.latex2word_jobs/bdec16e626584bf0992f8db9f18edee3/: events.ndjson  request.json  status.json
backend/: __init__.py  app.py  auth.py  db.py  job_queue.py  job_utils.py  model_catalog.py  orders.py  server.py  settings.py  worker.py
configs/: pipeline.json  prompts.json  rules.json  temp.docx  terms.example.json  terms.json
examples/CogniWeb/: neurips_2025.tex  (+1 more)
frontend/: app.js  index.html  styles.css
latex2word/: __init__.py  config.py  pipeline.py  progress.py  rules.py
latex2word.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
outputs/: citations.json  final.docx  refmap.json  refs.json  replaced.json
test/: fragment.xml  inject_ooxml_into_docx.py  out.docx  template.docx
(+67 files in other folders)
